# Gaussian

./: .gitignore  CMakeLists.txt
examples/: basic.gau
include/: Chunk.hpp  Position.hpp
include/Error/: Error.hpp
include/Lexer/: Lexer.hpp  Token.hpp
include/Util/: Fs.hpp  Logger.hpp
src/: Chunk.cpp  Position.cpp  main.cpp
src/Lexer/: Lexer.cpp  Token.cpp
src/Util/: Fs.cpp  Logger.cpp
